--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -68,6 +68,10 @@
 	height: 800px;
 }
 
+.subpage {
+	height: 800px;
+}
+
 .page-anchor {
 	height: 56px;
 }
@@ -108,6 +112,11 @@
 
 /* Contact */
 #page-5.page {
+	background-color: #777777;
+}
+
+/* Subpage Thanks - Message Confirmation */
+#page-thanks.subpage {
 	background-color: #777777;
 }
 
@@ -158,6 +167,11 @@
 .intro {
 	margin-top: 3%;
 	margin-bottom: 3%;
+}
+
+.intro-thanks {
+	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
 .same-line {
@@ -273,6 +287,10 @@
 		/*padding-bottom: 5%;*/
 	}
 
+	.subpage {
+		height: 800px;
+	}
+
 	#page-5.page {
 		height: 820px;
 		/*padding-bottom: 5%;*/
@@ -336,6 +354,10 @@
 		height: 100%;
 	}
 
+	.subpage {
+		height: 800px;
+	}
+
 	#page-1.page {
 		height: 800px;
 	}
@@ -348,6 +370,11 @@
 	.page-container {
 		padding-top: 11%;
 		padding-bottom: 11%;
+	}
+
+	.intro-thanks {
+		margin-top: 7%;
+		margin-bottom: 7%;
 	}
 
 	.footer-container {
@@ -403,6 +430,11 @@
 	.site-name {
 		padding-left: 40px;
 		padding-right: 40px;
+	}
+
+	.intro-thanks {
+		margin-top: 7%;
+		margin-bottom: 7%;
 	}
 
 	.footer-right-heading-indent {
