--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -141,10 +141,17 @@
 	padding-left: 34px;
 }
 
+/*div.footer-bottom-text {
+	display: block;
+    padding-bottom: 9em;
+}*/
+
 .footer-end {
 	padding-top: 70px;
 	font-size: 0.85em;
 	margin: 0;
+	display: block;
+    padding-bottom: 9em;
 }
 
 .self-img {
@@ -427,6 +434,10 @@
 		padding-bottom: 0%;
 	}
 
+	#page-5.page {
+		height: 740px;
+	}
+
 	.site-name {
 		padding-left: 40px;
 		padding-right: 40px;
@@ -437,15 +448,20 @@
 		margin-bottom: 7%;
 	}
 
+	.footer-container {
+		padding-top: 10%;
+	}
+
 	.footer-right-heading-indent {
 		padding-left: 0;
 	}
 
 	.footer-end {
-		padding-top: 98px;
+		padding-top: 70px;
 	}
 
 	.footer-block {
+		display: block;
 		height: 20%;
 		background-color: black;
 		background: url('../images/philadelphia.jpg');
@@ -453,6 +469,9 @@
     	background-repeat: no-repeat;
     	background-position: center bottom;
 		z-index: 1;
+		padding-bottom: 3em;
+    	margin-top: 6em;
+    	max-width: 100vw;
 	}
 
 	.copyright-margin {
